--- a/src/orb.yml
+++ b/src/orb.yml
@@ -10,12 +10,15 @@ examples:
       version: 2.1
 
       orbs:
-        rebar3: tsloughter/rebar3@0.3.0
+        rebar3: tsloughter/rebar3@0.4.0
 
       workflows:
         build-test:
           jobs:
             - rebar3/compile
+            - rebar3/lint:
+                requires:
+                  - rebar3/compile
             - rebar3/xref:
                 requires:
                   - rebar3/compile
@@ -134,6 +137,20 @@ commands:
       - run:
           command: rebar3 ct
 
+  eunit:
+    description: |
+      Run eunit tests.
+    steps:
+      - run:
+          command: rebar3 eunit
+
+  lint:
+    description: |
+      Lints with elvis.
+    steps:
+      - run:
+          command: rebar3 lint
+
 jobs:
   compile:
     executor: erlang
@@ -145,7 +162,26 @@ jobs:
             - compile
       - on_fail_store_crashdump:
           cmd: compile
-
+  lint:
+    executor: erlang
+    steps:
+      - install_ca_certs
+      - checkout
+      - with_deps_cache:
+          steps:
+            - lint
+      - on_fail_store_crashdump:
+          cmd: lint
+  eunit:
+    executor: erlang
+    steps:
+      - install_ca_certs
+      - checkout
+      - with_deps_cache:
+          steps:
+            - eunit
+      - on_fail_store_crashdump:
+          cmd: eunit
   dialyzer:
     executor: erlang
     steps:
@@ -158,7 +194,6 @@ jobs:
                   - dialyzer
       - on_fail_store_crashdump:
           cmd: dialyzer
-
   xref:
     executor: erlang
     steps:
