--- a/src/orb.yml
+++ b/src/orb.yml
@@ -10,7 +10,7 @@ examples:
       version: 2.1
 
       orbs:
-        rebar3: tsloughter/rebar3@0.5.2
+        rebar3: tsloughter/rebar3@0.5.3
 
       workflows:
         build-test:
@@ -196,7 +196,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project/
           paths:
-            - _build/test/cover
+            - _build/test/
   dialyzer:
     executor: erlang
     steps:
@@ -239,7 +239,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project/
           paths:
-            - _build/test/cover
+            - _build/test/
   cover:
     executor: erlang
     steps:
@@ -253,7 +253,7 @@ jobs:
       - persist_to_workspace:
           root: ~/project/
           paths:
-            - _build/test/cover
+            - _build/test/
       - on_fail_store_crashdump:
           cmd: cover
       - store_artifacts:
